--- a/noraaa.html
+++ b/noraaa.html
@@ -1,4 +1,4 @@
-<doctype! html>
+<doctype!>
 <html>
     <head>
         <title>helo welcom to my site</title>
@@ -9,7 +9,7 @@
         </h2>
         <address>+989923973045</address>
         <b> gameplAY VIDEO</b>
-        <a harf="https://free-learn.ir/">برو به سایت فلان</a>
+        <a href="https://free-learn.ir/">برو به سایت فلان</a>
     </body>
 </html>
 </doctype>
